[package]
name = "merkle-cbt-lean"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = {version = "1.5.0", default-features = false}

[dev-dependencies]
merkle-cbt = {version = "0.3.2", default-features = false}

[features]
default = ["std"]
std = []

[lib]
name = "merkle_cbt_lean"
crate-type = ["lib"]
