[package]
description = "Special implementation of Complete Merkle Binary Tree for minimal memory footprint."
license = "GPL-3.0-or-later"
name = "merkle-cbt-lean"
version = "0.1.1"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/Alzymologist/merkle-cbt-lean"
homepage = "https://github.com/Alzymologist/merkle-cbt-lean"
documentation = "https://docs.rs/merkle-cbt-lean"
keywords = ["no_std", "merkle", "accumulator"]
exclude = ["/.github"]

[dependencies]
external-memory-tools = {version = "0.1.1", default-features = false}

[dev-dependencies]
blake3 = {version = "1.5.0", default-features = false}
merkle-cbt = {version = "0.3.2", default-features = false}

[features]
default = ["blake3/std", "external-memory-tools/std", "proof-gen", "std"]
proof-gen = []
std = []

[lib]
name = "merkle_cbt_lean"
crate-type = ["lib"]
